testing javascript button
js button

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -2,7 +2,14 @@
 <head>
     <title>JavaScript Example</title>
     <script>
-        alert("Hello, welcome to the JavaScript example!");
+        function greet() {
+            alert("Hello, welcome to the JavaScript example!");
+        }
 
     </script>
+</head>
+<body>
+    <h1>JavaScript Example</h1>
+    <p>This is a simple example of using JavaScript in an HTML document.</p>
+    <button onclick="greet()">Click Me!</button>
 </html>
